--- a/Data Pipeline/01 - Populate Campaign Finance.ipynb
+++ b/Data Pipeline/01 - Populate Campaign Finance.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install psycopg2-binary"
+    "#pip install psycopg2-binary"
    ]
   },
   {
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install unidecode"
+    "#pip install unidecode"
    ]
   },
   {
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conn = psycopg2.connect(database=\"campaign-finance-new\",\n",
+    "conn = psycopg2.connect(database=\"campaign-finance\",\n",
     "                        user=\"data\",\n",
     "                       password=\"data\",\n",
     "                        host=\"postgresdb\",\n",
@@ -123,9 +123,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('fixing transaction categories ...')\n",
+    "print('fixing raw_table categories ...')\n",
     "c.execute(\"update raw_table \"\n",
     "          \"set transaction_category = 'C' \"\n",
+    "          \"where transaction_category = ''\"\n",
     "          )\n",
     "print(\"Done.\")"
    ]
@@ -172,7 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('fixing transaction categories ...')\n",
+    "print('fixing raw_table categories ...')\n",
     "c.execute(\"update raw_table \"\n",
     "          \"set transaction_category = 'E' \"\n",
     "          \" WHERE transaction_category <> 'C' \"\n",
@@ -212,9 +213,18 @@
     "          \" city VARCHAR(200) DEFAULT '' NOT NULL, state VARCHAR(15) DEFAULT '' NOT NULL, \"\n",
     "          \" zip VARCHAR(11) DEFAULT '' NOT NULL, occupation VARCHAR(200) DEFAULT '' NOT NULL, \"\n",
     "          \" employer VARCHAR(200) DEFAULT '' NOT NULL, \"\n",
-    "          \" is_donor INT, is_vendor INT, is_person INT, is_organization INT,\"\n",
+    "          \" is_canon INT, is_donor INT, is_vendor INT, is_person INT, is_organization INT,\"\n",
     "          \" lat REAL, lon REAL, census_block BIGINT, import_date TIMESTAMP\"\n",
     "          \" )\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(\"table created, inserting records\")\n",
     "c.execute(\"INSERT INTO accounts \"\n",
     "          \"(name, address_1, \"\n",
