--- a/Data Pipeline/03 - Post Dedupe.ipynb
+++ b/Data Pipeline/03 - Post Dedupe.ipynb
@@ -10,15 +10,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "pip install dj_database_url"
+    "#pip install dj_database_url"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "#pip install psycopg2-binary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pip install unidecode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,14 +59,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "conn = psycopg2.connect(database=\"campaign-finance\",\n",
-    "                        user=\"postgres\",\n",
-    "                       password=\"\",\n",
-    "                        host=\"172.16.238.13\",\n",
+    "                        user=\"data\",\n",
+    "                       password=\"data\",\n",
+    "                        host=\"postgresdb\",\n",
     "                        port=\"5432\")\n",
     "c = conn.cursor()"
    ]
@@ -58,18 +80,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "updates canon account numbers on transactions where matches occured\n",
-      "Done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"updates canon account numbers on transactions where matches occured\")\n",
     "c.execute(\"UPDATE transactions \" \n",
@@ -82,18 +95,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "update canon account ids for those without a match\n",
-      "Done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"update canon account ids for those without a match\")\n",
     "c.execute(\"update transactions \" \n",
@@ -105,7 +109,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"set canon id flag on accounts table\")\n",
+    "c.execute(\"update accounts \" \n",
+    "                  \" set is_canon = 1 \" \n",
+    "                  \" where account_id in (select distinct canon_account_id from transactions) \" )\n",
+    "print(\"Done.\")\n",
+    "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"set canon id flag to zero on accounts not canon\")\n",
+    "c.execute(\"update accounts \" \n",
+    "                  \" set is_canon = 0 \" \n",
+    "                  \" where is_canon is null \" )\n",
+    "print(\"Done.\")\n",
+    "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,18 +153,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "fixing bad committee IDs\n",
-      "Done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"fixing bad committee IDs\")\n",
     "c.execute(\"UPDATE committees \" \n",
@@ -144,18 +167,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "updates canon committee id on transactions \n",
-      "Done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"updates canon committee id on transactions \")\n",
     "c.execute(\"UPDATE transactions \" \n",
@@ -174,18 +188,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating Contributions View\n",
-      "Done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Creating Contributions View\")\n",
     "c.execute(\"CREATE VIEW contributions AS \"\n",
@@ -213,18 +218,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating Expenses View\n",
-      "Done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Creating Expenses View\")\n",
     "c.execute(\"CREATE VIEW expenses AS \"\n",
@@ -251,18 +247,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating Contributions with Names View\n",
-      "Done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Creating Contributions with Names View\")\n",
     "c.execute(\"CREATE VIEW  contributions_with_names AS \"\n",
@@ -284,18 +271,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating Expenses with Names View\n",
-      "Done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Creating Expenses with Names View\")\n",
     "c.execute(\"CREATE VIEW  expenses_with_names AS \"\n",
@@ -317,18 +295,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Additional Info regarding accounts - is vendor\n",
-      "Done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Additional Info regarding accounts - is vendor\")\n",
     "c.execute(\"UPDATE accounts  \"\n",
@@ -341,20 +310,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Additional Info regarding accounts - is donor\n",
-      "Done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Additional Info regarding accounts - is donor\")\n",
     "c.execute(\"UPDATE accounts  \"\n",
@@ -374,18 +334,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "creating committee list table...\n",
-      "Done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('creating committee list table...')\n",
     "c.execute(\"CREATE TABLE public.committee_list \"\n",
@@ -403,25 +354,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-15-a7ba23360611>:6: DeprecationWarning: 'U' mode is deprecated\n",
-      "  with open(full_filename, 'rU') as csv_file:\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "directory = os.fsencode(\"./data/committee_list\")\n",
     "    \n",
@@ -442,18 +377,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "creating committee doc list table...\n",
-      "Done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('creating committee doc list table...')\n",
     "c.execute(\"CREATE TABLE public.committee_doc_list \"\n",
@@ -475,44 +401,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "b'./data/committee_doc_list/Campaign Document Search By Entity-Level2-Part1(1).csv'\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-17-6fe8d033cc89>:6: DeprecationWarning: 'U' mode is deprecated\n",
-      "  with open(full_filename, 'rU') as csv_file:\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "b'./data/committee_doc_list/Campaign Document Search By Entity-Level2-Part1(2).csv'\n",
-      "b'./data/committee_doc_list/Campaign Document Search By Entity-Level2-Part1(3).csv'\n",
-      "b'./data/committee_doc_list/Campaign Document Search By Entity-Level2-Part1(4).csv'\n",
-      "b'./data/committee_doc_list/Campaign Document Search By Entity-Level2-Part1(5).csv'\n",
-      "b'./data/committee_doc_list/Campaign Document Search By Entity-Level2-Part1(6).csv'\n",
-      "b'./data/committee_doc_list/Campaign Document Search By Entity_1613742718(1).csv'\n",
-      "b'./data/committee_doc_list/Campaign Document Search By Entity_1613742718(2).csv'\n",
-      "b'./data/committee_doc_list/Campaign Document Search By Entity_1613742718(3).csv'\n",
-      "b'./data/committee_doc_list/Campaign Document Search By Entity_1613742718(4).csv'\n",
-      "b'./data/committee_doc_list/Campaign Document Search By Entity_1613742718(5).csv'\n",
-      "b'./data/committee_doc_list/Campaign Document Search By Entity_1613742718(6).csv'\n",
-      "b'./data/committee_doc_list/Campaign Document Search By Entity_1613742718(7).csv'\n",
-      "Done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "directory = os.fsencode(\"./data/committee_doc_list\")\n",
     "    \n",
@@ -535,18 +426,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "fixing committee ids ...\n",
-      "Done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('fixing committee ids ...')\n",
     "c.execute(\"update committee_doc_list \"\n",
@@ -557,19 +439,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "creating active candidate committees list table...\n",
-      "Done.\n"
-     ]
-    }
-   ],
+   "source": [
+    "## Begin matching committees to candidates ##"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "print('creating active candidate committees list table...')\n",
     "c.execute(\"CREATE TABLE public.active_candidate_committees \"\n",
@@ -607,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,26 +496,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "b'./data/active_committee_list/active-candidate-committees-20200327.csv'\n",
-      "Done.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-21-f1662de3e382>:6: DeprecationWarning: 'U' mode is deprecated\n",
-      "  with open(full_filename, 'rU') as csv_file:\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "directory = os.fsencode(\"./data/active_committee_list\")\n",
     "    \n",
@@ -660,6 +523,7 @@
     "                      \"treasurer_middle_name, \"\n",
     "                      \"treasurer_last_name, \"\n",
     "                      \"treasurer_email, \"\n",
+    "            \n",
     "                      \"asst_treasurer_first_name, \"\n",
     "                      \"asst_treasurer_middle_name, \"\n",
     "                      \"asst_treasurer_last_name, \"\n",
@@ -723,18 +587,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "applying active candiate info to committees - candidate_id\n",
-      "Done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"applying active candiate info to committees - candidate_id\")\n",
     "c.execute(\"UPDATE committees \" \n",
@@ -746,18 +601,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "applying active candiate info to committees - treasurer_id\n",
-      "Done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"applying active candiate info to committees - treasurer_id\")\n",
     "c.execute(\"UPDATE committees \" \n",
@@ -769,18 +615,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "applying active candiate info to committees - asst_treasurer_id\n",
-      "Done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"applying active candiate info to committees - asst_treasurer_id\")\n",
     "c.execute(\"UPDATE committees \" \n",
@@ -799,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,18 +645,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "creating active committee person list table...\n",
-      "Done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('creating active committee person list table...')\n",
     "c.execute(\"CREATE TABLE public.committee_person \"\n",
@@ -841,20 +669,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "applying active candiate info to committee person table - treasurer\n",
-      "Done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"applying active candiate info to committee person table - treasurer\")\n",
     "c.execute(\"INSERT INTO public.committee_person \" \n",
@@ -869,18 +688,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "applying active candiate info to committee person table - candidate\n",
-      "Done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"applying active candiate info to committee person table - candidate\")\n",
     "c.execute(\"INSERT INTO public.committee_person \" \n",
@@ -893,18 +703,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "applying active candiate info to committee person table - asst treasurer\n",
-      "Done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"applying active candiate info to committee person table - asst treasurer\")\n",
     "c.execute(\"INSERT INTO public.committee_person \" \n",
@@ -917,20 +718,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "creating candidates view...\n",
-      "Done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('creating candidates view...')\n",
     "c.execute(\"CREATE VIEW candidates AS \"\n",
@@ -944,20 +736,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "creating treasurers view...\n",
-      "Done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('creating treasurers view...')\n",
     "c.execute(\"CREATE VIEW treasurers AS \"\n",
@@ -971,18 +754,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "creating asst_treasurers view...\n",
-      "Done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('creating asst_treasurers view...')\n",
     "c.execute(\"CREATE VIEW asst_treasurers AS \"\n",
@@ -1018,7 +792,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
